# psocial2

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  example.env  setup.sh  setup_structure.sh
docs/: arquitetura.md  dev_guidelines.md  infra.md  structure_project.md  twilio.md
migrations/: 001_create_users.sql  002_create_empresas.sql  003_create_mensagens.sql
migrations/20250406/: 0004_create_twilio_table.sql
src/: app.rs  lib.rs  main.rs  state.rs  utils.rs
src/auth/: config.rs  dto.rs  extractor.rs  handler.rs  hash.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/db/: mod.rs
src/empresas/: dto.rs  handler.rs  mod.rs
src/handlers/: home.rs  user.rs
src/models/: empresa.rs  twilio.rs  user.rs
src/routes/: auth.rs  empresas.rs  mod.rs  twilio_routes.rs
src/twilio/: dto.rs  handler.rs  tests.rs
templates/: index.html.tera
