[package]
name = "psocial2"
version = "0.1.0"
edition = "2021"

[dependencies]

# --- Web e Middleware ---
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header", "cookie"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["trace"] }
headers = "0.4.0"
async-trait = "0.1.80"

# --- Runtime ---
tokio = { version = "1.36.0", features = ["full"] }

# --- Banco de Dados ---
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }

# --- Serialização ---
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# --- Templates HTML ---
tera = "1.19.1"

# --- Segurança e Criptografia ---
argon2 = "0.5.2"
rand_core = "0.6.4"
jsonwebtoken = "9.2.0"

# --- Validação ---
validator = { version = "0.16.1", features = ["derive"] }

# --- Configuração e Logs ---
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"

# --- Integrações externas ---
printpdf = "0.6.0"
